--- a/form2_p.ui
+++ b/form2_p.ui
@@ -236,7 +236,7 @@ QPushButton:pressed { background: white; }</string>
        <string notr="true">color:white;</string>
       </property>
       <property name="text">
-       <string>Задача:</string>
+       <string>Задача: постройте сечение по заданным точкам</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_7">
@@ -324,7 +324,7 @@ QPushButton:pressed { background: white; }</string>
        <string notr="true">color:white;</string>
       </property>
       <property name="text">
-       <string>Задача:</string>
+       <string>Задача: постройте сечение по заданным точкам</string>
       </property>
      </widget>
      <widget class="QLabel" name="pic2">
@@ -425,7 +425,7 @@ QPushButton:pressed { background: white; }</string>
        <string notr="true">color:white;</string>
       </property>
       <property name="text">
-       <string>Задача:</string>
+       <string>Задача: постройте сечение по заданным точкам</string>
       </property>
      </widget>
     </widget>
