--- a/form1_p.ui
+++ b/form1_p.ui
@@ -237,7 +237,7 @@ QPushButton:pressed { background: white; }</string>
        <string>Задача: постройте сечение по заданным точкам.</string>
       </property>
      </widget>
-     <widget class="QLabel" name="label_7">
+     <widget class="QLabel" name="pic1">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -322,7 +322,7 @@ QPushButton:pressed { background: white; }</string>
        <string notr="true">color:white;</string>
       </property>
       <property name="text">
-       <string>Задача:</string>
+       <string>Задача: постройте сечение по заданным точкам</string>
       </property>
      </widget>
      <widget class="QLabel" name="pic2">
@@ -423,7 +423,7 @@ QPushButton:pressed { background: white; }</string>
        <string notr="true">color:white;</string>
       </property>
       <property name="text">
-       <string>Задача:</string>
+       <string>Задача: постройте сечение по заданным точкам</string>
       </property>
      </widget>
     </widget>
